--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
 asgiref==3.7.2
+dj-database-url==2.1.0
 Django==5.0.2
 django-cors-headers==4.3.1
+django-environ==0.11.2
 djangorestframework==3.14.0
 gunicorn==21.2.0
 packaging==23.2
+postgres==4.0
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
+psycopg2-pool==1.2
 pytz==2024.1
 sqlparse==0.4.4
+typing_extensions==4.9.0
 whitenoise==6.6.0
